--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@ magicXform/.z3-trace
 magicXform/res_*.smt2
 challenges/
 passed-challenges/
+results/logs
+results/refactoring_attempts
 results/SAT
+results/SATs
+results/UNSAT
